@@ -28,7 +28,9 @@ $ -> Language fix or change
 
 11-Aug-2012 Jean-Marie Simonet
  #+ [#25295] Email exposed through RSS and Atom feeds. Thanks Elin and Peter
+ # [#28795] mod_articles_category "read more" truncation not functioning properly. Thanks Elin.
  ^ [#28374] Deprecate MediaHelper::parseSize() and use JHtmlNumber::bytes() to process file size in Media Manager. Thanks Michael.
+ + [#28902] Add CLI to remove files that weren't removed at update. Thanks Michael
 
 10-Aug-2012 Rouven Weßling
  ^ Reduce use of deprecated JDatabase and JRequest methods.
